# Rubber-Duck

./: .gitignore  CLAUDE.md  HANDOFF.md  LICENSE  README.md  TODO.md  gemini-extension.json
.agents/plugins/: marketplace.json
.claude/: settings.json
.claude-plugin/: marketplace.json
.claude/hooks/: on-claude-stop.sh  on-user-prompt.sh
.gemini/: settings.json
.github/workflows/: bambu-firmware-release.yml  cc-firmware-release.yml
bambu/: CLAUDE.md  DEPLOY.md  README.md  STATE.md
bambu/agent/: README.md  system_prompt.md  tools.json  voice.md
bambu/docs/: FLASHING.md  MULTI-TENANT-REQ.md
bambu/elevenlabs/: agent-template.json
bambu/firmware/: .gitignore  CMakeLists.txt  Makefile  README.md  partitions.csv  sdkconfig.defaults
bambu/firmware/main/: CMakeLists.txt  agent.c  agent.h  audio.c  audio.h  config.h  duck_id.c  duck_id.h  elevenlabs.c  elevenlabs.h  idf_component.yml  main.c  opus_decoder.cpp  opus_decoder.h  phrases.c  phrases.h  provision.c  provision.h  servo.c  servo.h  wake.c  wake.h  wifi.c  wifi.h
bambu/firmware/main/phrases/: tap_to_start.opus  tap_to_start.txt  wifi_connected.opus  wifi_connected.txt  wifi_up.opus  wifi_up.txt
bambu/firmware/scripts/: README.md  gen_phrases.py
bambu/firmware/tools/: capture_duck_mic.py  capture_mic.py
bambu/relay/: .dockerignore  .gitignore  Dockerfile  README.md  bambu_cloud.py  bambu_state.py  db.py  duck_proxy.py  entrypoint.sh  fly.toml  hms_codes.py  litestream.yml  main.py  mock_printer.py  requirements.txt
boyband/: CLAUDE.md  OPERATIONS.md  PLAN.md  README.md  STATE.md  duck-map.example.json
boyband/docs/: api-keys.md  audio-garble-debugging.md  boyband-effort-handoff.md  duck-id-mapping.md  orchestrator.md  show-runbook.md  stage-protocol.md  websocket-heartbeat-handoff.md
boyband/scripts/: fake-duck.py  gen-dialogue.py  gen-tts.py
boyband/stage/: Package.swift  README.md
docs/: AGENT-TEAMS-HOOK-AUDIT.md  API-KEY-PLAN.md  BAMBU-DUCK-API-SURVEY.md  DUCK-HELP-GROUNDING.md  ESP32-MIGRATION.md  FEEDBACK.md  FOUNDATION-MODELS-RESEARCH.md  HELP-MANUAL-RECOMMENDATIONS.md  LEGACY-HOOKS.md  MOBY-DUCK.md  ONBOARDING-AUDIT.md  ONBOARDING-FEEDBACK-2026-03-23.md  ONBOARDING-TEST-REPORT.md  ONBOARDING.md  REPO-RENAME.md  REVERTED-BUGS.md  S3-FIRMWARE-GAP.md  TBD.md  TONE-REFERENCE.md  UAC-RESEARCH.md  VOICE-SELECTION-V2.md  WEBSITE-SYNC.md  anthropic-meeting-notes.md  demo-script.md  index.html  install_risks.md  phase-2-hardware-handoff.md  speech-orchestration.md
docs/flash/: README.md  index.html
docs/flash/firmware/: README.md  cc-latest.json
docs/flash/img/: README.md
docs/flash/manifests/: cc-ducky.json  cc-xiao.json  ducky.json  xiao.json
firmware/: LICENSE  README.md  test_mic_capture.py
firmware/rubber_duck/: AudioBridge.ino  Config.h  I2SAudio.ino  LEDControl.ino  SerialProtocol.ino  ServoControl.ino  rubber_duck.ino
firmware/rubber_duck_c3/: AudioStream.ino  ChirpSynth.ino  Config.h  MicCapture.ino  SerialProtocol.ino  ServoControl.ino  build_opt.h  rubber_duck_c3.ino  test_audio_stream.py  test_chirp.py  test_chirp_synth.py  test_mic.py
firmware/rubber_duck_esp32/: Config.h  Easing.ino  LEDDriver.ino  SerialProtocol.ino  ServoControl.ino  rubber_duck_esp32.ino
firmware/rubber_duck_s3/: ChirpSynth.ino  Config.h  SerialProtocol.ino  ServoControl.ino  StoredAudio.ino  build_opt.h  rubber_duck_s3.ino
firmware/rubber_duck_s3_ducky/: AudioStream.ino  Config.h  Easing.ino  MicCapture.ino  NeoPixelStatus.ino  SerialProtocol.ino  ServoControl.ino  build_opt.h  rubber_duck_s3_ducky.ino
firmware/rubber_duck_s3_led/: Config.h  SerialProtocol.ino  ServoControl.ino  rubber_duck_s3_led.ino
firmware/rubber_duck_s3_telyart/: AudioStream.ino  Config.h  MicCapture.ino  SerialProtocol.ino  ServoControl.ino  StoredAudio.ino  rubber_duck_s3_telyart.ino
firmware/rubber_duck_s3_telyart_crab/: AudioStream.ino  ChirpSynth.ino  Config.h  SerialProtocol.ino  ServoControl.ino  rubber_duck_s3_telyart_crab.ino
firmware/rubber_duck_s3_uac/: CMakeLists.txt  README.md  sdkconfig.defaults
firmware/rubber_duck_s3_uac/main/: AudioI2S.cpp  CMakeLists.txt  Config.h  Easing.cpp  SerialProtocol.cpp  ServoControl.cpp  StatusLED.cpp  USBAudio.cpp  idf_component.yml  rubber_duck_s3_uac.cpp
firmware/rubber_duck_s3_waveshare/: Config.h  SerialProtocol.ino  ServoControl.ino  StoredPhrases.h  rubber_duck_s3_waveshare.ino
firmware/rubber_duck_teensy40/: AudioBridge.ino  Config.h  Easing.ino  SerialProtocol.ino  ServoControl.ino  rubber_duck.ino
gemini/: README.md  settings.json
gemini/hooks/: duck-env.sh  on-before-tool.sh  on-notification.sh  on-session-start.sh
hardware/: README.md
hardware/CAD/: 95893A197_Flat Head Thread-Forming Screws for Plastic.SLDPRT  DuckLips.SLDPRT  README.md  SG90_Servo_Motor.SLDPRT  SG90_Servo_Motor.stp  SP-3605.SLDPRT  SP-3605.stp
hardware/CAD/3MF Files/: Back (INMP441)-test.3mf  Back (INMP441-WAVESHARE)-test.3mf  DIY-ButtonRetainer.3mf  (+17 more)
hardware/EE/: DuckyBRD.brd  Ducky_Schematic.sch  README.md
hooks/: hooks.json
plugin/: PLAN.md  README.md  RISKS.md
plugin-gemini/: README.md
plugin-gemini/hooks/: on-after-agent.sh  on-before-model.sh
plugin/.claude-plugin/: plugin.json
plugin/hooks/: duck-env.sh  hooks.json  on-claude-stop.sh  on-permission-request.sh  on-post-compact.sh  on-post-tool-use.sh  on-pre-compact.sh  on-session-end.sh  on-session-start.sh  on-stop-failure.sh  on-user-prompt.sh
plugins/duck-duck-duck-codex/: README.md
relay/: .env.example  README.md  main.py
samples/: la.aiff  mmmm_ss.aiff  test_melody.py
scripts/: demo.sh  duck-env.sh  duck-session  on-claude-stop.sh  on-permission-request.sh  on-user-prompt.sh  start-service.sh  stop-service.sh  test-permissions.md  test_eval.sh
scripts/dev/: README.md  clean-install.sh
service/: broadcast.py  dashboard.html  duck_config.py  evaluator.py  permission.py  requirements.txt  routes.py  server.py  speech.py  test_eval.sh  tmux_bridge.py  voice.py
widget/: Info.plist  Makefile  Package.resolved  Package.swift  Sandbox.entitlements
widget/Playground/: Package.swift  README.md
(+74 files in other folders)
